# tv-agent

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  main.py  mcp_client.py  pyproject.toml  server.py
app/: config.py  main.py
app/routers/: command.py  profiles.py
app/schemas/: __init__.py  models.py
app/services/: adb.py  agent.py  database.py  tv_tools.py  youtube_ocr.py
