[project]
name = "agentic-tv-controller"
version = "0.1.0"
description = "Webhook service to control Android TV via LiteLLM + MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "openai>=1.60.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agentic-tv = "server:main"
